# video_player

./: .gitignore  Cargo.toml  LICENSE
examples/: demuxer_test.rs  media_source_test.rs  video_player.rs
src/: app.rs  convert_from_yuv.rs  demuxer.rs  lib.rs  main.rs  media_source.rs  presenter.rs  shaders.wgsl  texture.rs  video_renderer.rs  wgpu_context.rs
src/ffmpeg/: context.rs  mod.rs
src/shaders/: convert_yuv_to_rgba.wgsl  present.wgsl
